hphp/hack/test/typecheck/collection_unexpected_arrow_immset_legacy.php
<?hh

function test(): void {
  // Using key => value in a value-only collection (ImmSet)
  $x = ImmSet {'key' => 'value'};
}
